Add pinia and sidebar v1

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,8 @@
 {
-  "welcome": "Welcome!",
-  "start_quiz": "Start Quiz",
-  "logout": "Logout"
+  "light": "Light",
+  "dark": "Dark",
+  "neon": "Neon",
+  "Home": "Home",
+  "Quiz": "Quiz",
+  "Settings": "Settings"
 }
