--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -44,5 +44,11 @@
     "success": "¡Registro exitoso!",
     "error": "Fallo al registrar. Inténtalo de nuevo.",
     "passwordMismatch": "Las contraseñas no coinciden"
+  },
+  "home": {
+    "title": "¡Bienvenido a JAM Quiz!",
+    "subtitle": "Desafía tu conocimiento con quizzes emocionantes y compite con amigos.",
+    "cta1": "Comenzar a jugar",
+    "cta2": "Explorar quizzes"
   }
 }
