--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -77,5 +77,9 @@
     "joinButton": "Entrar a Sala",
     "startGame": "Iniciar Juego",
     "validation": "Por favor completa todos los campos requeridos."
+  },
+  "quizzes": {
+    "selectTitle": "Selecciona un quiz para jugar",
+    "playNow": "Jugar ahora"
   }
 }
