--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -20,6 +20,25 @@
   "dark": "Oscuro",
   "neon": "Neón",
   "loginTitle": "Iniciar sesión",
+  "sidebar": {
+    "general": "General",
+    "quizzes": "Cuestionarios",
+    "results": "Resultados",
+    "feedback": "Feedback",
+    "admin": "Admin",
+    "home": "Inicio",
+    "settings": "Configuración",
+    "liveQuiz": "Quiz en Vivo",
+    "createQuiz": "Crear Quiz",
+    "openQuiz": "Abrir Quiz",
+    "myHistory": "Mi Historial",
+    "ranking": "Ranking",
+    "badges": "Insignias",
+    "feedbackItem": "Feedback",
+    "adminDashboard": "Panel",
+    "manageQuizzes": "Quizzes",
+    "userStats": "Estadísticas"
+  },
   "login": {
     "title": "Iniciar sesión",
     "email": "Correo electrónico",
