Add badges view v1

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -113,5 +113,10 @@
     "adminDashboard": "Dashboard",
     "manageQuizzes": "Quizzes",
     "userStats": "User Stats"
+  },
+  "badges": {
+    "title": "Your Badges",
+    "earnedBy": "Badges earned by {name}",
+    "noBadges": "No badges earned yet"
   }
 }
