Add feedback view v1

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -118,5 +118,35 @@
     "title": "Your Badges",
     "earnedBy": "Badges earned by {name}",
     "noBadges": "No badges earned yet"
+  },
+  "feedback": {
+    "title": "Feedback",
+    "yourFeedbacks": "Your feedbacks",
+    "questionsToEvaluate": "Questions to evaluate",
+    "noQuestions": "There are no questions to evaluate.",
+    "noResults": "No results found for your search.",
+    "givenBy": "Feedback given by {name}",
+    "noFeedback": "You haven't given any feedback yet.",
+    "unknownQuiz": "Unknown Quiz",
+    "clearLabel": "Clear:",
+    "commentLabel": "Comment:",
+    "searchPlaceholder": "Search by quiz or question",
+    "allQuestions": "All Questions",
+    "noQuestionsFound": "No questions found.",
+    "evaluateBtn": "Evaluate",
+    "evaluate": "Evaluate",
+    "modalTitle": "Evaluate Question",
+    "questionClear": "Was the question clear?",
+    "commentPlaceholder": "Optional comment",
+    "cancel": "Cancel",
+    "submit": "Submit",
+    "yes": "Yes",
+    "no": "No",
+    "hideDetails": "Hide details",
+    "viewDetails": "View details",
+    "clarityLabel": "Clarity:",
+    "clear": "Clear",
+    "unclear": "Unclear",
+    "noComment": "No comment"
   }
 }
