--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -120,5 +120,35 @@
     "title": "Tus Insignias",
     "earnedBy": "Insignias obtenidas por {name}",
     "noBadges": "Aún no tienes insignias"
+  },
+  "feedback": {
+    "title": "Retroalimentación",
+    "yourFeedbacks": "Tus retroalimentaciones",
+    "questionsToEvaluate": "Preguntas por evaluar",
+    "noQuestions": "No hay preguntas para evaluar.",
+    "noResults": "No se encontraron resultados para tu búsqueda.",
+    "givenBy": "Retroalimentación dada por {name}",
+    "noFeedback": "Aún no has dado ninguna retroalimentación.",
+    "unknownQuiz": "Quiz desconocido",
+    "clearLabel": "¿Es clara?:",
+    "commentLabel": "Comentario:",
+    "searchPlaceholder": "Buscar por quiz o pregunta",
+    "allQuestions": "Todas las preguntas",
+    "noQuestionsFound": "No se encontraron preguntas.",
+    "evaluateBtn": "Evaluar",
+    "evaluate": "Evaluar",
+    "modalTitle": "Evaluar pregunta",
+    "questionClear": "¿La pregunta fue clara?",
+    "commentPlaceholder": "Comentario opcional",
+    "cancel": "Cancelar",
+    "submit": "Enviar",
+    "yes": "Sí",
+    "no": "No",
+    "hideDetails": "Ocultar detalles",
+    "viewDetails": "Ver detalles",
+    "clarityLabel": "Claridad:",
+    "clear": "Clara",
+    "unclear": "Poco clara",
+    "noComment": "Sin comentario"
   }
 }
